add one article

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   </head>
   
   <body>
-    <h1>The Onion</h1>
+    <img src="public/images/onion_logo.png"/>
+
+    <br>
+
+    <img src="public/images/skeleton.jpg" />
+    <h2>Archaeological Dig Uncovers Ancient Race Of Skeleton People</h2>
+    <p>
+      AL JIZAH, EGYPT - A team of British and Egyptian archaeologists made a stunning discovery Monday, unearthing several intact specimens of "skeleton people"—skinless, organless humans who populated the Nile delta region an estimated 6,000 years ago.
+    </p>
+
   </body>
 
 </html>
