add dolphin article

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
       AL JIZAH, EGYPT - A team of British and Egyptian archaeologists made a stunning discovery Monday, unearthing several intact specimens of "skeleton people"—skinless, organless humans who populated the Nile delta region an estimated 6,000 years ago.
     </p>
 
+    <img src="public/images/dolphin.jpg" />
+    <h2>Dolphin Spends Amazing Vacation Swimming With Stockbroker</h2>
+    <p>
+      ORLANDO, FL - Describing the encounter as a once-in-a-lifetime experience she'll never forget, local bottlenose dolphin Hazel reportedly recounted stories Tuesday from a recent vacation in which she got to go swimming with a stockbroker.
+    </p>
+
+
   </body>
 
 </html>
