--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   
   <body>
+
     <img src="public/images/onion_logo.png"/>
 
     <br>
@@ -21,6 +22,14 @@
       ORLANDO, FL - Describing the encounter as a once-in-a-lifetime experience she'll never forget, local bottlenose dolphin Hazel reportedly recounted stories Tuesday from a recent vacation in which she got to go swimming with a stockbroker.
     </p>
 
+    <img src="public/images/facial_expressions.jpg" />
+    <h2>Man Forced To Come Up With 45 Seconds Of Facial Expressions While Waitress Lists Off Specials</h2>
+    <p>
+      CHICAGO - Racking his brain to come up with what he felt were the most natural and appropriate reactions, local man Jeff Stadler was reportedly forced to come up with 45 seconds' worth of varied facial expressions Friday as his server at Superior Seafood Grill listed off the restaurant's daily specials.
+    </p>
+
+    <img src="public/images/kitten.jpg" />
+    <h2>Kitten Thinks of Nothing But Murder All Day</h2>
 
   </body>
 
