add link to article from skeleton photo and headline

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
     <br>
 
-    <img src="public/images/skeleton.jpg" />
-    <h2>Archaeological Dig Uncovers Ancient Race Of Skeleton People</h2>
+    <a href="http://www.theonion.com/article/archaeological-dig-uncovers-ancient-race-of-skelet-1268">
+      <img src="public/images/skeleton.jpg" />
+      <h2>Archaeological Dig Uncovers Ancient Race Of Skeleton People</h2>
+    </a>
     <p>
       AL JIZAH, EGYPT - A team of British and Egyptian archaeologists made a stunning discovery Monday, unearthing several intact specimens of "skeleton people"—skinless, organless humans who populated the Nile delta region an estimated 6,000 years ago.
     </p>
