--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>The Onion</title>
+    <link rel="icon" type="image/png" href="public/images/onion_icon.png" sizes="60x60">
   </head>
   
   <body>
