add link to stylesheet

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>The Onion</title>
     <link rel="icon" type="image/png" href="public/images/onion_icon.png" sizes="60x60">
+    <link href="public/css/style.css" rel="stylesheet">
+
   </head>
   
   <body>
