wrap articles in divs

--- a/index.html
+++ b/index.html
@@ -13,34 +13,42 @@
 
     <br>
 
-    <a href="http://www.theonion.com/article/archaeological-dig-uncovers-ancient-race-of-skelet-1268">
-      <img src="public/images/skeleton.jpg" />
-      <h2>Archaeological Dig Uncovers Ancient Race Of Skeleton People</h2>
-    </a>
-    <p>
-      AL JIZAH, EGYPT - A team of British and Egyptian archaeologists made a stunning discovery Monday, unearthing several intact specimens of "skeleton people"—skinless, organless humans who populated the Nile delta region an estimated 6,000 years ago.
-    </p>
+    <div class="article">
+      <a href="http://www.theonion.com/article/archaeological-dig-uncovers-ancient-race-of-skelet-1268">
+        <img src="public/images/skeleton.jpg" />
+        <h2>Archaeological Dig Uncovers Ancient Race Of Skeleton People</h2>
+      </a>
+      <p>
+        AL JIZAH, EGYPT - A team of British and Egyptian archaeologists made a stunning discovery Monday, unearthing several intact specimens of "skeleton people"—skinless, organless humans who populated the Nile delta region an estimated 6,000 years ago.
+      </p>
+    </div>
 
-    <a href="http://www.theonion.com/article/dolphin-spends-amazing-vacation-swimming-with-stoc-33382">
-      <img src="public/images/dolphin.jpg" />
-      <h2>Dolphin Spends Amazing Vacation Swimming With Stockbroker</h2>
-    </a>
-    <p>
-      ORLANDO, FL - Describing the encounter as a once-in-a-lifetime experience she'll never forget, local bottlenose dolphin Hazel reportedly recounted stories Tuesday from a recent vacation in which she got to go swimming with a stockbroker.
-    </p>
+    <div class="article">
+      <a href="http://www.theonion.com/article/dolphin-spends-amazing-vacation-swimming-with-stoc-33382">
+        <img src="public/images/dolphin.jpg" />
+        <h2>Dolphin Spends Amazing Vacation Swimming With Stockbroker</h2>
+      </a>
+      <p>
+        ORLANDO, FL - Describing the encounter as a once-in-a-lifetime experience she'll never forget, local bottlenose dolphin Hazel reportedly recounted stories Tuesday from a recent vacation in which she got to go swimming with a stockbroker.
+      </p>
+    </div>
 
-    <a href="http://www.theonion.com/article/man-forced-come-45-seconds-facial-expressions-whil-50650">
-      <img src="public/images/facial_expressions.jpg" />
-      <h2>Man Forced To Come Up With 45 Seconds Of Facial Expressions While Waitress Lists Off Specials</h2>
-    </a>
-    <p>
-      CHICAGO - Racking his brain to come up with what he felt were the most natural and appropriate reactions, local man Jeff Stadler was reportedly forced to come up with 45 seconds' worth of varied facial expressions Friday as his server at Superior Seafood Grill listed off the restaurant's daily specials.
-    </p>
+    <div class="article">
+      <a href="http://www.theonion.com/article/man-forced-come-45-seconds-facial-expressions-whil-50650">
+        <img src="public/images/facial_expressions.jpg" />
+        <h2>Man Forced To Come Up With 45 Seconds Of Facial Expressions While Waitress Lists Off Specials</h2>
+      </a>
+      <p>
+        CHICAGO - Racking his brain to come up with what he felt were the most natural and appropriate reactions, local man Jeff Stadler was reportedly forced to come up with 45 seconds' worth of varied facial expressions Friday as his server at Superior Seafood Grill listed off the restaurant's daily specials.
+      </p>
+    </div>
 
-    <a href="http://www.theonion.com/graphic/kitten-thinks-of-nothing-but-murder-all-day-9783">
-      <img src="public/images/kitten.jpg" />
-      <h2>Kitten Thinks of Nothing But Murder All Day</h2>
-    </a>
+    <div class="article">
+      <a href="http://www.theonion.com/graphic/kitten-thinks-of-nothing-but-murder-all-day-9783">
+        <img src="public/images/kitten.jpg" />
+        <h2>Kitten Thinks of Nothing But Murder All Day</h2>
+      </a>
+    </div>
 
   </body>
 
