--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
   
   <body>
 
-    <img src="public/images/onion_logo.png"/>
+    <div id="title">
+      <img src="public/images/onion_logo.png"/>
+      <a href="http://www.theonion.com/">
+        <h3>America's Finest News Source</h3>
+      </a>
+      <a href="about.html">
+        <p>About</p>
+      </a>
+    </div>
+
 
     <br>
 
     <div class="article">
       <a href="http://www.theonion.com/article/archaeological-dig-uncovers-ancient-race-of-skelet-1268">
-        <img src="public/images/skeleton.jpg" />
+        <img src="public/images/resized_skeleton.png" />
         <h2>Archaeological Dig Uncovers Ancient Race Of Skeleton People</h2>
       </a>
       <p>
